# subquery-cli

./: .editorconfig  .gitignore  Cargo.toml  README.md  subquery.sh
.github/: release-template.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  initialize.rs  main.rs
src/command/: mod.rs  types.rs
src/command/handler/: handle_deployment.rs  handle_login.rs  handle_logs.rs  handle_project.rs  handle_user.rs  mod.rs
src/command/output/: mod.rs  output_deployment.rs  output_project.rs
src/subquery/: api.rs  config.rs  mod.rs  patch.rs  types.rs
