[package]
name = "subquery-cli"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Deploy subql use cli client"
homepage = "https://github.com/fewensa/subquery-cli"
repository = "https://github.com/fewensa/subquery-cli"
license = "MIT"
keywords = ["http"]
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]

readme = "README.md"
edition = "2021"

[dependencies]

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
reqwest = { version = "0.11", features = [ "rustls-tls", "json" ] }
