[package]
name = "subquery-cli"
version = "0.2.2"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Deploy subql use cli client"
homepage = "https://github.com/fewensa/subquery-cli"
repository = "https://github.com/fewensa/subquery-cli"
license = "MIT"
keywords = ["http"]
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]

readme = "README.md"
edition = "2021"

[[bin]]
name = "subquery"
path = "src/main.rs"

[dependencies]

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_with = "1"

reqwest = { version = "0.11", features = [ "rustls-tls", "json" ] }

tokio = { version = "1", features = [ "full" ] }

structopt = "0.3"

dirs = "4"
colored = "2"
requestty = "0.1"
exitcode = "1"
term-table = "1.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-attributes = "0.1"
color-eyre = "0.5"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.21.0", features = ["derive"] }
